// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popover handles callbacks 1`] = `
[MockFunction] {
  "calls": Array [
    Array [],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`popover renders as expected 1`] = `
<Popover
  className="filters-popover"
  id="reviewed-filter"
>
  <FormCheck
    checked={true}
    disabled={false}
    id="is-reviewed"
    inline={false}
    isInvalid={false}
    isValid={false}
    label="Is marked 'reviewed'"
    onChange={[Function]}
    title=""
    type="checkbox"
  />
  <div
    className="btn-apply-container"
  >
    <Button
      className="btn-clear btn-secondary"
      onClick={[Function]}
    >
      Clear
    </Button>
    <Button
      className="btn-apply"
      onClick={[MockFunction]}
    >
      Apply
    </Button>
  </div>
</Popover>
`;

exports[`renders as expected 1`] = `
<OverlayTrigger
  containerPadding={25}
  id="reviewed-filter"
  overlay={
    <Popover
      className="filters-popover"
      id="reviewed-filter"
    >
      <ForwardRef
        checked={true}
        disabled={false}
        id="is-reviewed"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Is marked 'reviewed'"
        onChange={[Function]}
        title=""
        type="checkbox"
      />
      <div
        className="btn-apply-container"
      >
        <Button
          className="btn-clear btn-secondary"
          onClick={[Function]}
        >
          Clear
        </Button>
        <Button
          className="btn-apply"
          onClick={[MockFunction]}
        >
          Apply
        </Button>
      </div>
    </Popover>
  }
  placement="bottom"
  rootClose={true}
  trigger="click"
>
  <Button
    className="btn-secondary btn-margin-left"
    id="reviewed-filter"
  >
    Reviewed
  </Button>
</OverlayTrigger>
`;
